<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_start_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.arhatbaid.boxmedemo.ActStartUp">

    <View
        android:id="@+id/viewDummy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:transitionName="@string/tran_toolbar" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imgMountain"
        android:layout_width="@dimen/login_mountain_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:src="@drawable/mountain"
        android:transitionName="@string/tran_mountain" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/common_padding"
        android:layout_marginTop="@dimen/very_huge_padding"
        android:layout_marginRight="@dimen/common_padding"
        android:layout_marginBottom="50dp"
        android:transitionName="@string/tran_sign_up"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/rlBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/common_padding"
            android:transitionName="@string/tran_list_body">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ipTxtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_email"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="@dimen/login_btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/very_huge_padding"
        android:background="@drawable/rounded_button_done"
        android:text="@string/btn_done"
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:transitionName="@string/tran_fab"
        android:visibility="visible" />
</RelativeLayout>
