<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/background"
        android:transitionName="@string/tran_toolbar"
        app:title="Feed"
        app:titleTextColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/rlBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="#f2f2f2"
        android:transitionName="@string/tran_list_body">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/lblNoRepoFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:visibility="gone"
            android:textSize="16sp"
            android:layout_margin="@dimen/common_padding"
            android:text="@string/no_repo"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcvRepo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/big_padding"
        android:clickable="true"
        android:src="@drawable/ic_logout"
        android:transitionName="@string/tran_fab"
        app:backgroundTint="@color/btn_done"
        app:fabSize="normal" />

</RelativeLayout>