<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/very_small_padding"
    android:orientation="horizontal"
    android:transitionName="@string/tran_view"
    app:cardElevation="@dimen/elevation"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="@dimen/detail_circular_dummy_view"
            android:layout_height="@dimen/detail_circular_dummy_view"
            android:layout_margin="@dimen/common_padding"
            android:background="@drawable/circular_view_purple"
            android:transitionName="@string/tran_dummy_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblRepoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/detail_title"
                android:transitionName="@string/tran_title" />

            <TextView
                android:id="@+id/lblRepoDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="af dfhv fijngefgfjngvii ejngjnbje ejngejie"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/detail_desc"
                android:transitionName="@string/tran_decs" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>