<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/background"
        android:transitionName="@string/tran_toolbar"
        app:title="Detail"
        app:contentInsetStart="0dp"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:titleTextColor="@android:color/white" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUser"
        android:layout_width="@dimen/detail_circular_dummy_view"
        android:layout_height="@dimen/detail_circular_dummy_view"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/small_padding"
        android:background="@drawable/circular_view_purple"
        android:transitionName="@string/tran_dummy_view" />


    <LinearLayout
        android:id="@+id/llBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_toEndOf="@+id/imgUser"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblRepoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Title"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            android:textColor="@android:color/black"
            android:textSize="@dimen/detail_title"
            android:transitionName="@string/tran_title" />

        <TextView
            android:id="@+id/lblRepoDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            tools:text="af dfhv fijngefgfjngvii ejngjnbje ejngejie"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/detail_desc"
            android:transitionName="@string/tran_decs" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/huge_padding"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imgStar"
                android:layout_width="@dimen/detail_count_image"
                android:layout_height="@dimen/detail_count_image"
                android:layout_marginRight="@dimen/very_small_padding"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/lblStarCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_count" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imgWatch"
                android:layout_width="@dimen/detail_count_image"
                android:layout_height="@dimen/detail_count_image"
                android:layout_marginLeft="@dimen/very_small_padding"
                android:layout_marginRight="@dimen/very_small_padding"
                android:src="@drawable/watch" />

            <TextView
                android:id="@+id/lblWatchCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:textSize="@dimen/detail_count" />


            <ImageView
                android:id="@+id/imgFork"
                android:layout_width="@dimen/detail_count_image"
                android:layout_height="@dimen/detail_count_image"
                android:layout_marginLeft="@dimen/very_small_padding"
                android:layout_marginRight="@dimen/very_small_padding"
                android:src="@drawable/fork" />

            <TextView
                android:id="@+id/lblForkCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_count" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnBrowser"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_btn_height"
        android:layout_below="@+id/llBody"
        android:layout_margin="@dimen/huge_padding"
        android:background="@drawable/rounded_button_git"
        android:text="@string/open_git"
        android:textColor="@android:color/white"
        android:textSize="@dimen/detail_desc" />
</RelativeLayout>